[gd_scene load_steps=52 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/MaxieIdle01.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieIdle00.png" type="Texture" id=2]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieBeam01.png" type="Texture" id=3]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieBeam02.png" type="Texture" id=4]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieBeam05.png" type="Texture" id=5]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieBeam03.png" type="Texture" id=6]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieBeam04.png" type="Texture" id=7]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieOrbShoot05.png" type="Texture" id=8]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieOrbShoot01.png" type="Texture" id=9]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieOrbShoot04.png" type="Texture" id=10]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieOrbShoot03.png" type="Texture" id=11]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieOrbShoot02.png" type="Texture" id=12]
[ext_resource path="res://RainIsoMainContents/Scenes/Maxie.gd" type="Script" id=13]
[ext_resource path="res://RainIsoMainContents/Scenes/MaxieAnimationTree.gd" type="Script" id=14]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead05.png" type="Texture" id=15]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead04.png" type="Texture" id=16]
[ext_resource path="res://RainIsoMainContents/Scenes/MaxiesLaser.tscn" type="PackedScene" id=17]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead03.png" type="Texture" id=18]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead06.png" type="Texture" id=19]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead01.png" type="Texture" id=20]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead07.png" type="Texture" id=21]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDamage01.png" type="Texture" id=22]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDamage02.png" type="Texture" id=23]
[ext_resource path="res://RainIsoMainContents/Resources/MaxieDead02.png" type="Texture" id=24]
[ext_resource path="res://RainIsoMainContents/Shader/ScenesDead.tres" type="Animation" id=25]
[ext_resource path="res://RainIsoMainContents/Scenes/MaxieHealthBar.tscn" type="PackedScene" id=26]

[sub_resource type="Animation" id=1]
resource_name = "Beam"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attacks/MaxiesLaser:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Attacks/MaxiesLaser/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationTree:parameters/conditions/Beam")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "increaseIdleCount"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Orb"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationTree:parameters/conditions/Orb")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "orbinstance"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "SETUP"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "StarStruck"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bounceinstance"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.2, 1.2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationTree:parameters/conditions/StarStruck")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 2 ), ExtResource( 22 ), ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 20 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "damaged"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 2 ), ExtResource( 22 ), ExtResource( 2 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Beam"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Orb"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "SETUP"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "StarStruck"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2
advance_condition = "Beam"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
advance_condition = "Orb"

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2
advance_condition = "StarStruck"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=21]
states/Beam/node = SubResource( 9 )
states/Beam/position = Vector2( 831, -33 )
states/Idle/node = SubResource( 10 )
states/Idle/position = Vector2( 552, 31 )
states/Orb/node = SubResource( 11 )
states/Orb/position = Vector2( 613, 135 )
states/SETUP/node = SubResource( 12 )
states/SETUP/position = Vector2( 316, 44 )
states/StarStruck/node = SubResource( 13 )
states/StarStruck/position = Vector2( 547, -95.448 )
transitions = [ "SETUP", "Idle", SubResource( 14 ), "Idle", "Beam", SubResource( 15 ), "Beam", "Idle", SubResource( 16 ), "Idle", "Orb", SubResource( 17 ), "Orb", "Idle", SubResource( 18 ), "Idle", "StarStruck", SubResource( 19 ), "StarStruck", "Idle", SubResource( 20 ) ]
start_node = "SETUP"
graph_offset = Vector2( 145, -117.448 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="CircleShape2D" id=23]
radius = 10.4244

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 6.16676, 10.2634 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 1280, 2 )

[node name="Maxie" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Beam = SubResource( 1 )
anims/Idle = SubResource( 2 )
anims/Orb = SubResource( 3 )
anims/SETUP = SubResource( 4 )
anims/StarStruck = SubResource( 5 )

[node name="DamagedPlayer" type="AnimationPlayer" parent="."]
anims/ScenesDead = ExtResource( 25 )
anims/damaged = SubResource( 6 )

[node name="DeathPlayer" type="AnimationPlayer" parent="."]
anims/ScenesDead = SubResource( 7 )
anims/damaged = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )
parameters/conditions/Beam = false
parameters/conditions/Orb = false
parameters/conditions/StarStruck = false
script = ExtResource( 14 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 23 )

[node name="MaxieHealthBar" parent="." instance=ExtResource( 26 )]

[node name="ProgressBar" parent="MaxieHealthBar" index="0"]
visible = false
margin_left = 192.0
margin_top = 32.0
margin_right = 1088.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 24 )

[node name="Attacks" type="Node2D" parent="."]

[node name="MaxiesLaser" parent="Attacks" instance=ExtResource( 17 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -0.0555318, -0.126902 )
z_index = -1

[node name="Sprite" parent="Attacks/MaxiesLaser" index="1"]
position = Vector2( -639.944, 0.126902 )

[node name="CollisionShape2D" parent="Attacks/MaxiesLaser/Area2D" index="0"]
position = Vector2( -639.944, 0.126902 )
shape = SubResource( 25 )

[node name="CombatPosition" type="Position2D" parent="."]
position = Vector2( -16, 0 )

[node name="Tween" type="Tween" parent="."]
playback_speed = 0.25
playback/speed = 0.25

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="MaxieHealthBar"]
[editable path="Attacks/MaxiesLaser"]
